heading for dol and restructure

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -10,7 +10,6 @@ number-sections: true
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
-
 -   [Research Questions - Feb 2024](#research-questions---feb-2024)
 -   [Notes to restructure](#notes-to-restructure)
 -   [Chapter outline](#chapter-outline)
@@ -40,8 +39,15 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
             process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
     -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
-        -   [The development of divisions of labour - MOVED FROM NEXT
-            CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
+        -   [Working knowledge of different types of GDPs can help
+            participants to divide project elements by
+            pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
+        -   [Structuring work processes through implementing modular
+            sub-projects in the form of GDPs can aid division of
+            labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
+        -   [Other notable observations concerning division of labour in
+            the video
+            data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
     -   [The role of GDP used in emerging technical
         processes](#the-role-of-gdp-used-in-emerging-technical-processes)
         -   [Use of GDPs to facilitate use of
@@ -687,15 +693,15 @@ At this stage of their process, some of these patterns have been discussed and s
     Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
     Mark: So you want to get your person animated that’s the main thing.
     Mark: Shall we concentrate on that and changing the platforms into something different?
-    <!-- Ed: Yeah.
-    Mark: Yeah?
-    Ed: I also want to make a theme tune.
-    Mark: Yeah. It’s, that’s what I mean, you can’t just skip around like that.
-    Ed: Hmmm.
-    Mark: Just cos it gets really overwhelming.
-    Mark: Yeah..? So…?
-    Long pause.
-    Mark: Well I’ll have a look at the code and see if I can make sense of that. -->
+<!-- Ed: Yeah.
+Mark: Yeah?
+Ed: I also want to make a theme tune.
+Mark: Yeah. It’s, that’s what I mean, you can’t just skip around like that.
+Ed: Hmmm.
+Mark: Just cos it gets really overwhelming.
+Mark: Yeah..? So…?
+Long pause.
+Mark: Well I’ll have a look at the code and see if I can make sense of that. -->
 
 The child's initial listing of features is a brainstorming technique. Such techniques are used to aid a creative process. This example shows the use of the approximate names of a number of game design patterns by the child adult. These are _get the person animated_, _get an enemy in_, _changing the platforms into something different_, _make a theme tune_. However while this use of terms shows the promise of the use use of GDPs as conceptual short cuts to aid planning and  prioritisation, the process is still not unproblematic. The parent seems to lack a process to map these out and then to work together to prioritise them.  Instead he appears to be keen to quickly pick one.  His suggested process is to then work through the documentation on that pattern. Ed appears reluctant to both work on adapt a the working process suggested by his father. Hence, the next section continues to explore this interaction in an exploration of the division of labour between participants.
 
@@ -737,11 +743,12 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
 
-**Participants can split work and resolve problems in a variety of ways. GDPs can feature in this process in various ways**
+Participants split work between them and resolve problems in a variety of ways. GDPs feature in this process and other processes of division of labour are also relevant to the overall coding process.
 
-This section explores different approaches to division of labour. Mark and Ed work closely together, Suzanne helps Olivia alternate between points of low and high engagement with coding process, and Molly and her daughter Nadine are work on different projects in different parts of the room but still interact at key points.
 
-**Working knowledge of GDPs can help participants to divide project elements**
+#### Working knowledge of different types of GDPs can help participants to divide project elements by pattern
+
+The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or peers.
 
 In the last section, Mark and Ed used GDPs to attempt to prioritise work. However, following this Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In the next exchange, they progress to more successfully divide their labour informally.
 
@@ -764,9 +771,14 @@ Or perhaps the parent steers the child into graphical areas as they are able to 
 compliance may be a kind or pragmatic decision to allow smoother progress. -->
 
 The father describes previous behaviour which showed issues involving
-prioritisation as 'skipping around like that' or 'jumping all over the place' as 'overwhelming'. The child seems to suggest a more piecemeal approach. The child suggests a possible resolution to the current blockage. He suggests splitting and using one laptop each. He names one of the other pattern. The familiarity with GDPs facilitates  the young person to direct an informal division on labour. The child continues to work on parallel patterns or component actions of pattern using tools and processes which he is more familiar with. This child also begins researching other toolsets, in this session, research to identify an online tool to create an short audio soundtrack. This serves the child as it allows them to avoid waiting for their father and moving different parts of the overall project forward.
+prioritisation as 'skipping around like that' or 'jumping all over the place' as 'overwhelming'. The child does not respond to this suggestion to focus on one GDP, suggests a different option. He suggests splitting and using one laptop each. He names one of the other pattern. The child continues to work on parallel patterns or component actions of pattern using tools and processes which he is more familiar with. This child also begins researching other toolsets, in this session, research to identify an online tool to create an short audio soundtrack. This serves the child as it allows them to avoid waiting for their father and moving different parts of the overall project forward.
 
-The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or peers, For example in this case the child appears to make a tactical decision allowing the father to decipher technical instructions and implement them in the code of their game as they creating assets in non-code / GUI environments.
+The familiarity with GDPs facilitates  the young person to direct an informal division on labour. (HOW EXACTLY?)
+The child appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating assets in non-code / GUI environments.
+
+#### Structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
+
+Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting.
 
 Sh and Olivia relied on the parent to do the majority of code implementation and shared one computer. The opening vignette shows the child use the name of a GDP as a way to communicate about the shared work of making a game.
 
@@ -782,36 +794,46 @@ The utterance by the child "Key Door Person"  work on the game design pattern ca
 The parent outlines her strategies used to address lack of reading ability as a barrier to participation. The design choice of a grid of letters representing different elements of the platform game appears appropriate in the case of a novice learning to code and read at the same time.  After the child has delegated a coding task to her mother she undertakes other activities. At times her activities directly contribute to the main goal of game making. At times the parent asked the child to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times she engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
 
-NOTE: FIND A GOOD PLACE FOR THIS - LATER?
+Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
+
+
+#### Other notable observations concerning division of labour in the video data
+
+While these following observations are more generally inked to the overall design process rather than the specific note they are of value to RQ2 on developing agency.
+
 While Olivia's activity away from the screen and the main objective of coding and creating assets for their game could in a conventional educational model be seen an non-productive, in a community model of learning this can be interpreted differently. For example as legitimate peripheral activity [@lave_situating_1991], or as an observation stage of LOPI model [@rogoff_learning_2014].  The possibility for children to not engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
-
-
 
 These examples illustrate the varied strategies to  divisions of labour that parents and children adopt. While  seem beneficial for many participants however complex tensions in activity emerge. For example  Molly and Nadine reversed traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPS but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
 
-    NOTE - COVERT TO TABLE?
+<!-- NOTE - COVERT TO TABLE?
 
-    Molly continues to do solo design using the Piskel graphical too. She encounters a design problem. When erasing a part of the design she gets rid of background colour. Molly asks for help from partner but receives misleading advice which does not help her progress.
-    Molly:  Oh no it’s not done that has it?
+Molly continues to do solo design using the Piskel graphical too. She encounters a design problem. When erasing a part of the design she gets rid of background colour. Molly asks for help from partner but receives misleading advice which does not help her progress.
+Molly:  Oh no it’s not done that has it?
 
-    Molly calls the name of her child across room with theatrical gesture and loud whisper voice
-    Molly: “Nadine !”
-    Molly then makes face, wiggles head and shrugs at parent peer. The other parent laughs.
-    Nadine arrives to help.
+Molly calls the name of her child across room with theatrical gesture and loud whisper voice
+Molly: “Nadine !”
+Molly then makes face, wiggles head and shrugs at parent peer. The other parent laughs.
+Nadine arrives to help. -->
+
+
     Molly: I’m trying to delete them but they turn light grey.
     Nadine : So you want to get rid of them?
     Molly: What are you doing? You have to tell me what you are doing so I can do it myself.
     Molly: laughs
     Nadine : laughs.
     Molly: I’ll just have to keep shouting at you if you don’t tell me.
-    Nadine uses the mouse to select the grey background colour with the colour picker tool, then the pen tool to fill in gaps in the design. She then swaps the active colour back from grey to black by clicking the option to swap foreground and background colours.
     Molly - How did you do that so quickly? I’ve got to like, carefully... (makes hand gestures to show a sense of hesitant keyboard use)
     Parent peer laughs
     Nadine bounces up in place and smiles broadly.
-    Molly: Thanks
-    Molly: So am I like back with the black now?
-    Nadine : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
-    Molly: Oh X. Alright Bubs. Thanks.
+
+<!-- Nadine uses the mouse to select the grey background colour with the colour picker tool, then the pen tool to fill in gaps in the design. She then swaps the active colour back from grey to black by clicking the option to swap foreground and background colours.
+Molly - How did you do that so quickly? I’ve got to like, carefully... (makes hand gestures to show a sense of hesitant keyboard use)
+Parent peer laughs
+Nadine bounces up in place and smiles broadly.
+Molly: Thanks
+Molly: So am I like back with the black now?
+Nadine : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
+Molly: Oh X. Alright Bubs. Thanks. -->
 
 
     <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
@@ -829,23 +851,6 @@ The child also specialises in this aspect spending much time on this aspect. Thi
 This example shows  a practical division of labour based on the building of emerging skills and technical processes. The learning design which prioritises choice of different GDPs facilitates this. The process here illuminate the process of  building an identity as an individual or a family is. The next section develops this theme.
 
 
-
-<!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
-
-
-#### The development of divisions of labour - MOVED FROM NEXT CHAPTER
-
-<!-- The parent cedes the keyboard and mouse and sometimes swaps chairs to allow child to play test the game created.  -->
-
-Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
-
-
-<!-- At one point the testing process Suzanna shows frustration as gravity value is very low making any movement very slow with little control. While the child has previously rejected increasing the value, the parent's initial acceptance of this decision is later questioned. The parent who has to do the majority of the testing is more insistent to remove a frustrating part of the testing  process.   -->
-
-<!-- Discussion drawing on more radical attempts to describe the best way to bring young learners into a design practice.
-Perhaps in the field of participatory design. -->
-
-
 Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture. The pair's process is more guided and focused than many other participants. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
 
 This approach appears to be influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (Glossary). Interview extracts (included as appendices) show a direction to support the novices direction as a facilitator where possible.
@@ -857,6 +862,23 @@ This extract from interview data indicates a priority to support the learner to 
 **Leveraging the possibilities of emerging divisions of labour:**  While the context of the participants as families involved in home education makes any general claims difficult, these observations support  exist in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work parents can fulfil several,reciprocal roles including, collaborator, resource provider, learner, non-technical consultant and emotional support [@barron_parents_2009].
 
 Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident these roles [@roque_im_2016] in a way which mirrors the use of helpers this phase of my study.
+
+
+
+
+
+<!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
+
+
+<!-- The parent cedes the keyboard and mouse and sometimes swaps chairs to allow child to play test the game created.  -->
+
+
+
+
+<!-- At one point the testing process Suzanna shows frustration as gravity value is very low making any movement very slow with little control. While the child has previously rejected increasing the value, the parent's initial acceptance of this decision is later questioned. The parent who has to do the majority of the testing is more insistent to remove a frustrating part of the testing  process.   -->
+
+<!-- Discussion drawing on more radical attempts to describe the best way to bring young learners into a design practice.
+Perhaps in the field of participatory design. -->
 
 
 <!-- NOTE - LINK TO PREVIOUS CHAPTER ON FLEXIBILITY OF DESIGN -->
