--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -27,8 +27,15 @@
             process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
     -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
-        -   [The development of divisions of labour - MOVED FROM NEXT
-            CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
+        -   [Working knowledge of different types of GDPs can help
+            participants to divide project elements by
+            pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
+        -   [Structuring work processes through implementing modular
+            sub-projects in the form of GDPs can aid division of
+            labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
+        -   [Other notable observations concerning division of labour in
+            the video
+            data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
     -   [The role of GDP used in emerging technical
         processes](#the-role-of-gdp-used-in-emerging-technical-processes)
         -   [Use of GDPs to facilitate use of
